--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div id="intro">
                     <h2>Hey! I'm Geoffery</h2>
-                    <p>I'm a software developer located in South Texas, with a deep interest in fullstack development and with some experience in other languages such as:</p>
+                    <p>I'm a software developer located in Brownsville, Texas. I have a deep interest in fullstack development and with some experience in other languages such as:</p>
                     <ul>
                         <li>Node.js</li>
                         <li>Java</li>
