fixed error in markup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!--initializing the intro article-->
             <article>
                 <div id="image">
-                    <img src="PXL_20220513_011201513.PORTRAIT.jpg">
+                    <img alt="a portait of Geoffery Thornock" src="PXL_20220513_011201513.PORTRAIT.jpg">
                 </div>
                 <div id="intro">
                     <h2>Hey! I'm Geoffery</h2>
